minio/ingress_services.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-operator
  namespace: minio-operator
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: mykubeminio-console.tpi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: console
            port:
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-iceberg-console
  namespace: minio-iceberg
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: mykubeminio-iceberg-console.tpi.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: iceberg-storage-console
            port:
              number: 9090
---
